@@ -1,0 +1,8 @@
+#Ruta Client properties
+#Sun Dec 10 16:01:22 CET 2017
+mainFrame.height=800
+mainFrame.top=57
+mainFrame.title=Ruta Client - Rutasd
+cdrEndPoint=http\://localhost\:9010/ruta-server-0.0.1/CDR
+mainFrame.width=1000
+mainFrame.left=410
