@@ -17,7 +17,7 @@ import javax.xml.ws.WebServiceFeature;
  * Generated source version: 2.2
  *
  */
-@WebServiceClient(name = "CDRService", targetNamespace = "http://ruta.rs/services", wsdlLocation = "http://localhost:9010/ruta-server-0.0.1/CDR?wsdl")
+@WebServiceClient(name = "CDRService", targetNamespace = "http://ruta.rs/services", wsdlLocation = "http://ruta.sytes.net:9010/ruta-server-0.0.1/CDR?wsdl")
 public class CDRService
     extends Service
 {
@@ -30,7 +30,7 @@ public class CDRService
         URL url = null;
         WebServiceException e = null;
         try {
-            url = new URL("http://localhost:9010/ruta-server-0.0.1/CDR?wsdl");
+            url = new URL("http://ruta.sytes.net:9010/ruta-server-0.0.1/CDR?wsdl");
         } catch (MalformedURLException ex) {
             e = new WebServiceException(ex);
         }
